--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
             <artifactId>jsch</artifactId>
             <version>0.1.55</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.sshd</groupId>
+            <artifactId>sshd-core</artifactId>
+            <version>2.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
