--- a/pom.xml
+++ b/pom.xml
@@ -23,8 +23,11 @@
 
         <dependency>
             <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd-core</artifactId>
+            <artifactId>sshd-common</artifactId>
             <version>2.5.1</version>
+            <!-- https://mvnrepository.com/artifact/org.apache.sshd/sshd-common -->
+
+
         </dependency>
     </dependencies>
 
