--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
         <dependency>
             <groupId>org.apache.sshd</groupId>
-            <artifactId>sshd-common</artifactId>
+            <artifactId>sshd-core</artifactId>
             <version>2.5.1</version>
             <!-- https://mvnrepository.com/artifact/org.apache.sshd/sshd-common -->
 
