Adding Jsch dependency

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <version>0.0.1</version>
 
     <properties>
+        <start-class>com.akel.main</start-class>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
